--- a/survey-form/html/index.html
+++ b/survey-form/html/index.html
@@ -36,7 +36,7 @@
                 </div>
                 <div class="form-group">
                     <label id="dropdown-label" for="dropdown">Your current position</label>
-                    <select id="dropdown" required>
+                    <select id="dropdown">
                         <option disabled selected>Select an option</option>
                         <option value="frontend">Frontend Developer</option>
                         <option value="backend">Backend Developer</option>
@@ -70,7 +70,7 @@
                 </div>
                 <div class="form-group">
                     <label for="textarea">Tell us a little about yourself</label><br>
-                    <textarea id="textarea" placeholder="I like cookies..." rows="8"></textarea>
+                    <textarea id="textarea" placeholder="I like cookies..." rows="8" required></textarea>
                 </div>
                 <button id="submit">Submit your application</button>
             </form>
